--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ div.itens select{
 
 #botao{
     display: block;
-    margin: 0 auto;
+    margin: 20px auto 0 auto;
 	box-shadow:inset 0px 1px 0px 0px #caefab;
 	background:linear-gradient(to bottom, #77d42a 5%, #5cb811 100%);
 	background-color:#77d42a;
